# AgenticAIPortfolio

./: LICENSE  README.md
.github/workflows/: ci.yml
AutoGen/FinancialAnalysisAndCoding/: README.md  config.py  main.py  pyproject.toml  requirements.txt  stock_analysis.py
AutoGen/FinancialAnalysisAndCoding/MultiAgentFinancialAnalysis/: config.py  logger.py  main.py  stock_analysis.py
AutoGen/FinancialAnalysisAndCoding/financial_analysis/: __init__.py  logger.py  utils.py
AutoGen/FinancialAnalysisAndCoding/multi-agent-financial-analysis/: utils.py
AutoGen/FinancialAnalysisAndCoding/src/: main.py
AutoGen/FinancialAnalysisAndCoding/tests/: conftest.py  test_multiagent.py  test_stock_analysis.py
CrewAI/MultiAgentContentCreation/: README.md
CrewAI/MultiAgentCustomerOutreach/: README.md  requirements.txt
CrewAI/MultiAgentProjectAutomation/: README.md
CrewAI/MultiAgentResearchSystem/: README.md
LangGraph /AgenticEssayWriter/: .env.example  README.md  config.py
MultiAgentContentCreation/: README.md  requirements.txt
MultiAgentContentCreation/config/: tasks.yaml
MultiAgentCustomerOutreach/: README.md  setup.py
MultiAgentCustomerOutreach /: requirements.txt
MultiAgentCustomerSupportAutomation/: .gitignore  README.md  requirements.txt  setup.py
MultiAgentProjectAutomation/: README.md  requirements.txt
MultiAgentResearchSystem/: README.md  requirements.txt  setup.cfg
from-scratch/: .dockerignore  README.md  main.py  requirements.txt
voice_agent/: README.md  optimizing_latency.ipynb  requirements.txt  voice_agent_components.ipynb
(+112 files in other folders)
